# wavefst

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: reader.rs  writer.rs
src/: async_support.rs  error.rs  lib.rs  serde_support.rs  simd.rs
src/block/: blackout.rs  geom.rs  header.rs  hier.rs  mod.rs  time.rs  vc.rs
src/compression/: mod.rs
src/encoding/: mod.rs  varint.rs  varint_signed.rs
src/io/: mmap.rs  mod.rs  streaming.rs
src/reader/: change.rs  mod.rs  vc.rs
src/types/: enums.rs  mod.rs  value.rs
src/util/: mod.rs
src/writer/: mod.rs
tests/: async_support.rs  reader_hdl_example.rs  serde_support.rs  writer_basic.rs
